Actualizando el Home

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div><!-- .container ends -->
 
 <script>
-    $.get("nav-bar.html", function(data){
+    $.get("nav-bar.html", function (data) {
         $("#nav-placeholder").replaceWith(data);
     });
 </script>
@@ -62,7 +62,7 @@
                         <p class="leading"></p>
 
                         <div class="hero__cta">
-                            <a href="" class="button">Más información</a>
+                            <a href="about.html" class="button">Más información</a>
                         </div>
 
                     </div><!-- .hero__content -->
@@ -82,7 +82,7 @@
                         <p class="leading"></p>
 
                         <div class="hero__cta">
-                            <a href="" class="button">Más información</a>
+                            <a href="contact.html" class="button">Más información</a>
                         </div>
 
                     </div><!-- .hero__content -->
@@ -246,7 +246,7 @@
                                 <!--                    <div class="excerpt">-->
                                 <!--                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint culpa totam laborum.</p>-->
                                 <!--                    </div>-->
-                                <div class="ministry__link"><a href="ministries-single.html" class="button">Más
+                                <div class="ministry__link"><a href="ministries.html" class="button">Más
                                     información</a></div>
                             </div><!-- .ministry__content ends -->
 
@@ -282,7 +282,7 @@
                                         <!--                        <div class="excerpt">-->
                                         <!--                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint culpa totam laborum.</p>-->
                                         <!--                        </div>-->
-                                        <div class="ministry__link"><a href="ministries-single.html" class="button">Más
+                                        <div class="ministry__link"><a href="ministries.html" class="button">Más
                                             información</a></div>
                                     </div><!-- .ministry__content ends -->
 
@@ -317,7 +317,7 @@
                                         <!--                        <div class="excerpt">-->
                                         <!--                          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint culpa totam laborum.</p>-->
                                         <!--                        </div>-->
-                                        <div class="ministry__link"><a href="ministries-single.html" class="button">Más
+                                        <div class="ministry__link"><a href="ministries.html" class="button">Más
                                             información</a></div>
                                     </div><!-- .ministry__content ends -->
 
@@ -340,158 +340,158 @@
 
 
     <!-- OUR GALLERY STARTS -->
-    <section class="our-gallery gallery gallery--equal-grid default-section-spacing text-center">
+    <!--    <section class="our-gallery gallery gallery&#45;&#45;equal-grid default-section-spacing text-center">-->
 
-        <div class="section-heading">
-            <span>Nuestra Galeria</span>
-            <h2>Explora la galeria</h2>
-        </div><!-- .section-heading ends -->
+    <!--        <div class="section-heading">-->
+    <!--            <span>Nuestra Galeria</span>-->
+    <!--            <h2>Explora la galeria</h2>-->
+    <!--        </div>&lt;!&ndash; .section-heading ends &ndash;&gt;-->
 
-        <div class="row">
+    <!--        <div class="row">-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-1@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of the Holy Bible">
+    <!--                <a href="images/gallery-1@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of the Holy Bible">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-1@1.5x.jpg" alt="Picture of the Holy Bible" class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-1@1.5x.jpg" alt="Picture of the Holy Bible" class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-2@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of Jesus on a medal cross">
+    <!--                <a href="images/gallery-2@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of Jesus on a medal cross">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-2@1.5x.jpg" alt="Picture of Jesus on a medal cross"
-                                 class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-2@1.5x.jpg" alt="Picture of Jesus on a medal cross"-->
+    <!--                                 class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-3@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Bible study">
+    <!--                <a href="images/gallery-3@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Bible study">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-3@1.5x.jpg" alt="Bible study" class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-3@1.5x.jpg" alt="Bible study" class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-4@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Inside of a church">
+    <!--                <a href="images/gallery-4@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Inside of a church">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-4@1.5x.jpg" alt="Inside of a church" class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-4@1.5x.jpg" alt="Inside of a church" class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-5@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of people worshiping in church">
+    <!--                <a href="images/gallery-5@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of people worshiping in church">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-5@1.5x.jpg" alt="Picture of people worshiping in church"
-                                 class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-5@1.5x.jpg" alt="Picture of people worshiping in church"-->
+    <!--                                 class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-6@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of women laughing">
+    <!--                <a href="images/gallery-6@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of women laughing">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-6@1.5x.jpg" alt="Picture of women laughing" class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-6@1.5x.jpg" alt="Picture of women laughing" class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-7@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of a worship leader singing">
+    <!--                <a href="images/gallery-7@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of a worship leader singing">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-7@1.5x.jpg" alt="Picture of a worship leader singing"
-                                 class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-7@1.5x.jpg" alt="Picture of a worship leader singing"-->
+    <!--                                 class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-            <div class="flex-md-6 flex-lg-3 no-padding no-margin">
+    <!--            <div class="flex-md-6 flex-lg-3 no-padding no-margin">-->
 
-                <a href="images/gallery-8@2x.jpg" class="gallery-link" data-lightbox="church-picture"
-                   data-title="Picture of a smart kid at school">
+    <!--                <a href="images/gallery-8@2x.jpg" class="gallery-link" data-lightbox="church-picture"-->
+    <!--                   data-title="Picture of a smart kid at school">-->
 
-                    <div class="card gallery__card">
+    <!--                    <div class="card gallery__card">-->
 
-                        <div class="card__header">
-                            <img src="images/gallery-8@1.5x.jpg" alt="Picture of a smart kid at school"
-                                 class="card__image">
-                        </div>
+    <!--                        <div class="card__header">-->
+    <!--                            <img src="images/gallery-8@1.5x.jpg" alt="Picture of a smart kid at school"-->
+    <!--                                 class="card__image">-->
+    <!--                        </div>-->
 
-                    </div><!-- .card ends -->
+    <!--                    </div>&lt;!&ndash; .card ends &ndash;&gt;-->
 
-                </a><!-- .gallery-link -->
+    <!--                </a>&lt;!&ndash; .gallery-link &ndash;&gt;-->
 
-            </div><!-- .flex-* ends -->
+    <!--            </div>&lt;!&ndash; .flex-* ends &ndash;&gt;-->
 
-        </div><!-- .row ends -->
+    <!--        </div>&lt;!&ndash; .row ends &ndash;&gt;-->
 
-    </section><!-- .our-gallery ends -->
+    <!--    </section>&lt;!&ndash; .our-gallery ends &ndash;&gt;-->
     <!-- OUR GALLERY ENDS -->
 
 
@@ -789,7 +789,7 @@
     <!-- TIME AND LOCATION ENDS -->
 
     <script>
-        $.get("time-location.html", function(data){
+        $.get("time-location.html", function (data) {
             $("#time-location-placeholder").replaceWith(data);
         });
     </script>
@@ -813,7 +813,7 @@
     </div><!-- .container ends -->
 
     <script>
-        $.get("footer.html", function(data){
+        $.get("footer.html", function (data) {
             $("#footer-placeholder").replaceWith(data);
         });
     </script>
