Actualizando Home imagenes alineacion

--- a/index.html
+++ b/index.html
@@ -267,13 +267,15 @@
                                 <div class="card__header">
                                     <img src="images/ministry-3@1.5x.webp"
                                          alt="A little boy laughing while reading the Holy Bible"
-                                         class="card__image ministry__image">
+                                         class="card__image ministry__image"
+                                         style="object-position: bottom;"
+                                    />
                                 </div><!-- .card__header ends -->
 
                                 <div class="card__footer">
 
                                     <div class="ministry__title">
-                                        <h3>Brazo de Misericordia</h3>
+                                        <h3>Acomodadores del Reino</h3>
                                     </div>
 
                                     <!--                      <div class="ministry__meta"><i class="ri-group-line"></i> <span>26 Children</span></div>-->
@@ -302,7 +304,8 @@
 
                                 <div class="card__header">
                                     <img src="images/ministry-wommens.webp" alt="Young women praying"
-                                         class="card__image ministry__image">
+                                         class="card__image ministry__image"
+                                         style="object-position: bottom;">
                                 </div><!-- .card__header ends -->
 
                                 <div class="card__footer">
