Fixing video size

--- a/sermons.html
+++ b/sermons.html
@@ -128,14 +128,14 @@
 
               <div class="divVideoEmbed">
                   <div class="divVideoEmbedChild">
-                      <iframe class="latestVideoEmbed" vnum='0' cid="UC3dKXfaGzFL_YvslCMCUtdg" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+                      <iframe class="latestVideoEmbed" vnum='0' cid="UC3dKXfaGzFL_YvslCMCUtdg" width="50%" height="340" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <p id="video-title">Lorem ipsum</p>
               </div>
 
               <div>
                   <div class="divVideoEmbedChild">
-                      <iframe class="latestVideoEmbed" vnum='1' cid="UC3dKXfaGzFL_YvslCMCUtdg" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+                      <iframe class="latestVideoEmbed" vnum='1' cid="UC3dKXfaGzFL_YvslCMCUtdg" width="50%" height="340" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <p id="video-title">Lorem ipsum</p>
               </div>
