hiding some buttons

--- a/ministries.html
+++ b/ministries.html
@@ -181,8 +181,8 @@
                                     <div class="excerpt">
                                         <p>Comprometidos con las necesidades de la comunidad.</p>
                                     </div>
-                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más
-                                        Información</a></div>
+<!--                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más-->
+<!--                                        Información</a></div>-->
                                 </div><!-- .ministry__content ends -->
 
                             </div><!-- .card__footer ends -->
@@ -214,8 +214,8 @@
                                             palabra
                                             de Dios.</p>
                                     </div>
-                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más
-                                        Información</a></div>
+<!--                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más-->
+<!--                                        Información</a></div>-->
                                 </div><!-- .ministry__content ends -->
 
                             </div><!-- .card__footer ends -->
@@ -246,7 +246,7 @@
                                         <p>Nacidos en el corazón de Dios con el unico proposito de ayudar a los niños de
                                         escasos recursos y zonas de alto riesgo.</p>
                                     </div>
-                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más Información</a></div>
+<!--                                    <div class="ministry__link"><a href="ministries-single.html" class="button">Más Información</a></div>-->
                                 </div><!-- .ministry__content ends -->
 
                             </div><!-- .card__footer ends -->
