--- a/sermons.html
+++ b/sermons.html
@@ -28,9 +28,7 @@
 
     <!-- =================== SITE HEADER BEGINS ============================= -->
 
-    <div id="nav-placeholder">
-
-    </div><!-- .container ends -->
+    <nav class="navbar"></nav>
 
     <script>
         $.get("nav-bar.html", function(data){
@@ -514,6 +512,8 @@
     <script src="js/plugins/lightbox.min.js"></script>
     <!-- Main script -->
     <script src="dist/js/main.min.js"></script>
+
+    <script src="js/nav.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
