--- a/about.html
+++ b/about.html
@@ -29,15 +29,7 @@
 
     <!-- =================== SITE HEADER BEGINS ============================= -->
 
-    <div id="nav-placeholder">
-
-    </div><!-- .container ends -->
-
-    <script>
-        $.get("nav-bar.html", function(data){
-            $("#nav-placeholder").replaceWith(data);
-        });
-    </script>
+    <nav class="navbar"></nav>
     <!-- =================== SITE HEADER ENDS ============================= -->
 
 
@@ -542,6 +534,8 @@
     <script src="js/plugins/lightbox.min.js"></script>
     <!-- Main script -->
     <script src="dist/js/main.min.js"></script>
+
+    <script src="js/nav.js"></script>
 
   </body>
 
