--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="shortcut icon" href="images/favicon-cr.png" type="image/png">
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
 </head>
 
 <body>
@@ -28,15 +27,7 @@
 
 <!-- =================== SITE HEADER BEGINS ============================= -->
 
-<div id="nav-placeholder">
-
-</div><!-- .container ends -->
-
-<script>
-    $.get("nav-bar.html", function (data) {
-        $("#nav-placeholder").replaceWith(data);
-    });
-</script>
+<nav class="navbar"></nav>
 
 <!-- =================== SITE HEADER ENDS ============================= -->
 
@@ -841,6 +832,8 @@
 <script src="js/plugins/lightbox.min.js"></script>
 <!-- Main (custom) script -->
 <script src="dist/js/main.min.js"></script>
+
+<script src="js/nav.js"></script>
 
 </body>
 
