--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,116 @@
-<head><link rel="shortcut icon" href="assets/favicon.ico"><link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png"><link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png"><link rel="icon" type="image/png" sizes="48x48" href="assets/favicon-48x48.png"><link rel="manifest" href="assets/manifest.json"><meta name="mobile-web-app-capable" content="yes"><meta name="theme-color" content="#fff"><meta name="application-name" content="churchproject"><link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png"><link rel="apple-touch-icon" sizes="167x167" href="assets/apple-touch-icon-167x167.png"><link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png"><link rel="apple-touch-icon" sizes="1024x1024" href="assets/apple-touch-icon-1024x1024.png"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="churchproject"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-640x1136.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-750x1334.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-828x1792.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/apple-touch-startup-image-1125x2436.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/apple-touch-startup-image-1242x2208.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/apple-touch-startup-image-1242x2688.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-1536x2048.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-1668x2224.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-1668x2388.png"><link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-2048x2732.png"><link rel="apple-touch-startup-image" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/apple-touch-startup-image-1620x2160.png"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-1136x640.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-1334x750.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-1792x828.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="assets/apple-touch-startup-image-2436x1125.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="assets/apple-touch-startup-image-2208x1242.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="assets/apple-touch-startup-image-2688x1242.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-2048x1536.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-2224x1668.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-2388x1668.png"><link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-2732x2048.png"><link rel="apple-touch-startup-image" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="assets/apple-touch-startup-image-2160x1620.png"><link rel="icon" type="image/png" sizes="228x228" href="assets/coast-228x228.png"><meta name="msapplication-TileColor" content="#fff"><meta name="msapplication-TileImage" content="assets/mstile-144x144.png"><meta name="msapplication-config" content="assets/browserconfig.xml"><link rel="yandex-tableau-widget" href="assets/yandex-browser-manifest.json"><script defer="defer" src="./main.bundle.js"></script><script defer="defer" src="./nav.bundle.js"></script><script defer="defer" src="./videos.bundle.js"></script><script defer="defer" src="./cards.bundle.js"></script><script defer="defer" src="./owlCarousel.bundle.js"></script><script defer="defer" src="./jquery.bundle.js"></script><script defer="defer" src="./lightbox.bundle.js"></script><script defer="defer" src="./index.bundle.js"></script><link href="./main.css" rel="stylesheet"></head><div class="container"><div class="footer__top display-flex justify-align-center"><div class="footer__logo"><div class="logo-wrapper"><img src="images/logos/logo-sm.svg" alt="Small logo"></div></div></div><div class="footer__bottom"><div class="row align-items-center"><div class="flex-md-6 flex-lg-4"><div class="footer__info copyright">&copy; 2022 - Ciudadanos Del Reino - All Rights Reserved</div></div><div class="flex-md-6 flex-lg-4"><div class="footer__info credit">Diseñado y Desarrollado por Ciudadanos Del Reino</div></div><div class="flex-md-6 flex-lg-4"><div class="footer__info social"><span>Siguenos en nuestras redes sociales</span><div class="social__icons"><a href="https://www.facebook.com/iglesiacccr/" target="blank"><i class="ri-facebook-line"></i></a></div><div class="social__icons"><a href="https://www.youtube.com/channel/UC3dKXfaGzFL_YvslCMCUtdg" target="blank"><i class="ri-youtube-line"></i></a></div><div class="social__icons"><a href="https://www.instagram.com/ciudadanosdelreino_/" target="blank"><i class="ri-instagram-line"></i></a></div></div></div></div></div></div>
+<head>
+ <link href="assets/favicon.ico" rel="shortcut icon"/>
+ <link href="assets/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
+ <link href="assets/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
+ <link href="assets/favicon-48x48.png" rel="icon" sizes="48x48" type="image/png"/>
+ <link href="assets/manifest.json" rel="manifest"/>
+ <meta content="yes" name="mobile-web-app-capable"/>
+ <meta content="#fff" name="theme-color"/>
+ <meta content="churchproject" name="application-name"/>
+ <link href="assets/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57"/>
+ <link href="assets/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60"/>
+ <link href="assets/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72"/>
+ <link href="assets/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76"/>
+ <link href="assets/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114"/>
+ <link href="assets/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120"/>
+ <link href="assets/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144"/>
+ <link href="assets/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152"/>
+ <link href="assets/apple-touch-icon-167x167.png" rel="apple-touch-icon" sizes="167x167"/>
+ <link href="assets/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180"/>
+ <link href="assets/apple-touch-icon-1024x1024.png" rel="apple-touch-icon" sizes="1024x1024"/>
+ <meta content="yes" name="apple-mobile-web-app-capable"/>
+ <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+ <meta content="churchproject" name="apple-mobile-web-app-title"/>
+ <link href="assets/apple-touch-startup-image-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-750x1334.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-828x1792.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1242x2208.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1242x2688.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1536x2048.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1668x2224.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1668x2388.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2048x2732.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1620x2160.png" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1136x640.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1334x750.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-1792x828.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2436x1125.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2208x1242.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2688x1242.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2048x1536.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2224x1668.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2388x1668.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2732x2048.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/apple-touch-startup-image-2160x1620.png" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"/>
+ <link href="assets/coast-228x228.png" rel="icon" sizes="228x228" type="image/png"/>
+ <meta content="#fff" name="msapplication-TileColor"/>
+ <meta content="assets/mstile-144x144.png" name="msapplication-TileImage"/>
+ <meta content="assets/browserconfig.xml" name="msapplication-config"/>
+ <link href="assets/yandex-browser-manifest.json" rel="yandex-tableau-widget"/>
+ <script defer="defer" src="./main.bundle.js">
+ </script>
+ <script defer="defer" src="./nav.bundle.js">
+ </script>
+ <script defer="defer" src="./videos.bundle.js">
+ </script>
+ <script defer="defer" src="./cards.bundle.js">
+ </script>
+ <script defer="defer" src="./owlCarousel.bundle.js">
+ </script>
+ <script defer="defer" src="./jquery.bundle.js">
+ </script>
+ <script defer="defer" src="./lightbox.bundle.js">
+ </script>
+ <script defer="defer" src="./index.bundle.js">
+ </script>
+ <link href="./main.css" rel="stylesheet"/>
+</head>
+<div class="container">
+ <div class="footer__top display-flex justify-align-center">
+  <div class="footer__logo">
+   <div class="logo-wrapper">
+    <img alt="Small logo" src="images/logos/logo-sm.svg"/>
+   </div>
+  </div>
+ </div>
+ <div class="footer__bottom">
+  <div class="row align-items-center">
+   <div class="flex-md-6 flex-lg-4">
+    <div class="footer__info copyright">
+     © 2022 - Ciudadanos Del Reino - All Rights Reserved
+    </div>
+   </div>
+   <div class="flex-md-6 flex-lg-4">
+    <div class="footer__info credit">
+     Diseñado y Desarrollado por Ciudadanos Del Reino
+    </div>
+   </div>
+   <div class="flex-md-6 flex-lg-4">
+    <div class="footer__info social">
+     <span>
+      Siguenos en nuestras redes sociales
+     </span>
+     <div class="social__icons">
+      <a href="https://www.facebook.com/iglesiacccr/" target="blank">
+       <i class="ri-facebook-line">
+       </i>
+      </a>
+     </div>
+     <div class="social__icons">
+      <a href="https://www.youtube.com/channel/UC3dKXfaGzFL_YvslCMCUtdg" target="blank">
+       <i class="ri-youtube-line">
+       </i>
+      </a>
+     </div>
+     <div class="social__icons">
+      <a href="https://www.instagram.com/ciudadanosdelreino_/" target="blank">
+       <i class="ri-instagram-line">
+       </i>
+      </a>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
